2009-05-21  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Disable failing HTTP tests now that we are enabling HTTP on the
        bot.

        * platform/gtk/Skipped:

2009-05-21  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19517
        <rdar://problem/6007112> DOM modification of textArea causes Access Violation (NULL pointer?)

        This no longer happens with ToT, just adding a test.

        * fast/parser/head-parsing-19517-expected.txt: Added.
        * fast/parser/head-parsing-19517.html: Added.

2009-05-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        - test for <rdar://problem/6901751> REGRESSION (r35515): Tiger crash
          painting the selection on registration page of car2go.com

        * fast/block/float/selection-gap-clip-out-tiger-crash-expected.txt: Added.
        * fast/block/float/selection-gap-clip-out-tiger-crash.html: Added.

2009-05-21  Eric Seidel  <eric@webkit.org>

        Reviewed by Alexey Proskuryakov.

        Fix file-input-files-access which was passing for the wrong reasons.

        The log was pushing the drop target off screen and the drops were failing!

        * editing/pasteboard/file-input-files-access-expected.txt:
        * editing/pasteboard/resources/file-input-files-access.js:
        (testOrderedDraggingWithDirectory):
        (runTest):

2009-05-20  Gustavo Noronha Silva  <gns@gnome.org>

        Skipping a new test.

        * platform/gtk/Skipped:

2009-05-20  Gustavo Noronha Silva  <gns@gnome.org>

        Skipping test that fails intermitently.

        * platform/gtk/Skipped:

2009-05-20  Gustavo Noronha Silva  <gns@gnome.org>

        Rubber-stamped by Mark Rowe.

        Add GTK+-specific results for canvas-composite-alpha. This test
        has 'failing' cases that pass on GTK+/cairo.
